--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.room:room-runtime:2.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "androidx.room:room-compiler:2.0.0"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
 }
